// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders comment card correctly 1`] = `
<div
  className="notificationCard"
>
  <NotificationCardHeader
    delivery_method_type="on_demand"
    notification_type="comment"
  />
  <div
    className="notificationCardContents"
  >
    <h4
      className="recipientName"
    >
      Biggie Smalls - East Coast
    </h4>
    <p
      className="orderState"
    >
      UNCONFIRMED
    </p>
    <NotificationTiming
      comment={
        Object {
          "author": Object {
            "email": "metal@face.com",
            "name": "MF DOOM",
          },
          "created_at": "2017-01-01T00:00:00-05:00",
          "id": 1,
          "note": "Rap snitches, telling all their business. Sit in the court and be their own star witness",
        }
      }
      initial_timing="Deliver ASAP"
      notification_type="comment"
    />
    <div
      className="notificationButtonWrapper"
    >
      <Connect(ViewOrderButton)
        className="viewOrderButton"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`renders unconfirmed card correctly 1`] = `
<div
  className="notificationCard"
>
  <NotificationCardHeader
    delivery_method_type="on_demand"
    notification_type="unconfirmed"
  />
  <div
    className="notificationCardContents"
  >
    <h4
      className="recipientName"
    >
      Biggie Smalls - East Coast
    </h4>
    <p
      className="orderState"
    >
      UNCONFIRMED
    </p>
    <NotificationTiming
      initial_timing="Deliver ASAP"
      notification_type="unconfirmed"
    />
    <div
      className="notificationButtonWrapper"
    >
      <Connect(ViewOrderButton)
        className="viewOrderButton"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;
